--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,5 +1,14 @@
 {
   "files": [],
+  "compilerOptions": {
+    "types": [
+      "babel__core",
+      "babel__generator",
+      "babel__template",
+      "babel__traverse",
+      "prop-types"
+    ]
+  },
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
