--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
